# unihack

./: .gitignore  .shadow-trader.pids  README.md  analysis.ipynb  analysis_report.html  analysis_report.md  bias_variance.py  bias_variance_v2.py  deep_analysis.ipynb  deep_analysis_clean.md  deep_analysis_report.html  deep_analysis_summary.md  features.py  fetch_boxscores.py  market_data.py  model_v2.py  model_v4.py  nba_data.py  recorder.py  server.py
.claude/: settings.json
alpha-engine/: main.py  requirements.txt
dashboard/: next.config.js  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
data/: boxscore_advanced.parquet  v2_edge_model.json  v2_margin.json  v2_market_proxy.json  v2_win_probability.json  v4_calibrator.pkl  v4_edge_features.json  v4_edge_model.json  v4_live_features.json  v4_margin.json  v4_market_proxy.json  v4_pregame_features.json  v4_win_probability.json
execution-engine/: Cargo.toml
execution-engine/src/: main.rs  wallet.rs
