[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"
description = "NBA prediction-market execution engine — Polymarket odds ingestion + shadow trading"

[[bin]]
name = "execution-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio              = { version = "1",    features = ["full"] }

# WebSocket (Polymarket live odds)
tokio-tungstenite  = { version = "0.23", features = ["native-tls"] }
futures-util       = "0.3"

# HTTP (REST calls to Polymarket + Alpha Engine)
reqwest            = { version = "0.12", features = ["json"] }

# Serialisation
serde              = { version = "1",    features = ["derive"] }
serde_json         = "1"

# Database
rusqlite           = { version = "0.31", features = ["bundled"] }

# Utilities
uuid               = { version = "1",    features = ["v4"] }
chrono             = { version = "0.4",  features = ["serde"] }
anyhow             = "1"
url                = "2"

# HTTP API server
axum               = "0.7"
tower-http         = { version = "0.5", features = ["cors"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Testnet order signing (EIP-712)
secp256k1          = { version = "0.28", features = ["recovery", "global-context"] }
sha3               = "0.10"
hex                = "0.4"
num-bigint         = "0.4"
